tests/NormalTests/paczka2/big_fuzzy/18407886.err
Error in line 2: S777 S291 59,3
Error in line 5: wmXZdf9panw S777 42,4
Error in line 10: wmXZdf9panw A698 96,9
Error in line 8: CPJ A939 45,8
Error in line 20: 6RYjaJPY S291 89,6
Error in line 12: HnrFdlEa S291 89,3
Error in line 16: CPJ A698 94,6
Error in line 30: 9kQeXO A698 46,1
Error in line 34: CPJ A939 87,9
Error in line 42: wmXZdf9panw A698 12,0
Error in line 50: HnrFdlEa S777 54,6
Error in line 45: wmXZdf9panw S777 67,4
Error in line 51: 9kQeXO S777 63,9
Error in line 54: wmXZdf9panw S291 46,2
Error in line 59: 9kQeXO A698 77,4
Error in line 66: 6RYjaJPY S777 54,3
Error in line 70: S777 A698 80,4
Error in line 75: HnrFdlEa A939 65,6
Error in line 81: S777 A939 81,0
Error in line 82: S777 A698 91,2
Error in line 83: 9kQeXO S777 81,0
Error in line 104: S777 A698 8,87
Error in line 97: 9kQeXO A939 55,1
Error in line 80: HnrFdlEa A698 29,3
Error in line 98: S777 S291 34,5
Error in line 117: wmXZdf9panw S291 42,0
Error in line 134: HnrFdlEa S777 30,3
Error in line 148: S777 A698 7,0
Error in line 155: 9kQeXO A939 48,0
Error in line 157: HnrFdlEa A939 58,8
Error in line 161: HnrFdlEa S777 26,2
Error in line 163: CPJ S777 32,1
Error in line 165: 6RYjaJPY A939 20,8
Error in line 171: S777 S291 27,42
Error in line 170: 6RYjaJPY A698 30,1
Error in line 181: 6RYjaJPY S777 59,3
Error in line 185: 6RYjaJPY A698 29,7
Error in line 178: CPJ S777 47,2
Error in line 208: 6RYjaJPY A698 16,7
Error in line 212: S777 A`98 10,1
Error in line 172: HnrFdlEa S291 414,4
Error in line 222: HnrFdlEa A939 1,6
Error in line 234: 6RYjaJPY S291 95,6
Error in line 238: 6RYjaJPY A939 40,7
Error in line 229: S777 A698 17,9
Error in line 245: 9kQeXO A939 88,7
